2C spinor implementation underway, created a spinor class of arbitrary size inspired by Luca's orbital4c class

--- a/src/tut.ipynb
+++ b/src/tut.ipynb
@@ -9,32 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InitMolec test imag:  0.9999999999999296j\n",
-      "Energy:  (-2.4318118417464345+0j) 0\n",
-      "mu (2.205362483469071-0j)\n",
-      "Energy:  (-0.24927783795396777+0j) 1\n",
-      "mu (0.7060847512217889-0j)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/qpitto/Tests_KAIN/ZORA/response/src/scfsolv.py:122: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  self.G_mu.append(vp.HelmholtzOperator(self.mra, mu, self.prec))  # Initalize the operator\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overlap init post-powerIter\n",
-      "S= [[ 1.        +0.j -0.01020532+0.j]\n",
-      " [-0.01020532-0.j  1.        +0.j]]\n",
-      "orthonorm eigvals= [0.98979468 1.01020532]\n",
-      "Overlap init end\n",
-      "S= [[ 1.00000000e+00+0.j -7.18696897e-17+0.j]\n",
-      " [-7.18696897e-17-0.j  1.00000000e+00+0.j]]\n"
+      "Test spinors\n",
+      "length 2\n",
+      "+ ok\n",
+      "- ok\n",
+      "* ok\n",
+      "norme =  0.0\n",
+      "dot =  0j\n",
+      "Derivative ok\n"
      ]
     }
    ],
@@ -46,6 +28,7 @@
     "\n",
     "# import KAIN\n",
     "import utils\n",
+    "# from spinor import spinor\n",
     "from scfsolv import scfsolv as ss\n",
     "from scfsolv import scfsolv_1stpert as ss1\n",
     "\n",
@@ -60,7 +43,7 @@
     "# r_z = np.linspace(-16, 16, 10000)\n",
     "# r = [r_x, r_y, r_z]\n",
     "\n",
-    "print(\"testLC: \", utils.LeviCivita([1,2,3]), utils.LeviCivita([1,1,3]), utils.LeviCivita([2,1,3]))\n",
+    "\n",
     "\n",
     "# Electric_field = [0.01, 0., 0.]\n",
     "Electric_field = [0.01, 0., 0.]\n",
@@ -81,6 +64,27 @@
     "\n",
     "#create scf solver instance with default MRA\n",
     "Scfs = ss(prec, khist)\n",
+    "\n",
+    "# # print(\"testLC: \", utils.LeviCivita([1,2,3]), utils.LeviCivita([1,1,3]), utils.LeviCivita([2,1,3]))\n",
+    "# print(\"Test spinors\")\n",
+    "# spineur = spinor(Scfs.mra, 2)\n",
+    "# spineur.setZero()\n",
+    "# print(\"length\", len(spineur))\n",
+    "# spindeur = spineur + spineur\n",
+    "# print(\"+ ok\")\n",
+    "# spindeur = spineur - spineur\n",
+    "# print(\"- ok\")\n",
+    "# spindeur = 1. * spineur\n",
+    "# spindeur = 2 * spineur\n",
+    "# spindeur = 1j * spineur\n",
+    "# spindeur = spineur * 1\n",
+    "# print(\"* ok\")\n",
+    "# spindeur = spineur / 2\n",
+    "# spindeur = spineur / 2.\n",
+    "# print(\"norme = \", spineur.compSqNorm())\n",
+    "# print(\"dot = \", spineur.dot(spindeur))\n",
+    "# spindeur = spineur.derivative(0)\n",
+    "# print(\"Derivative ok\")\n",
     "\n",
     "\n",
     "# tut = [[-1.514986e+00, -8.879809e-02],\n",
@@ -106,6 +110,13 @@
     "\n",
     "# Scfs_pert.scfRun(thrs, True, True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
