debugging of 2C underway, some improvements on the serviceability of the code, even though nobody cares as it is a pilot implementation

--- a/src/tut.ipynb
+++ b/src/tut.ipynb
@@ -6,17 +6,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test spinors\n",
-      "length 2\n",
-      "+ ok\n",
-      "- ok\n",
-      "* ok\n",
-      "norme =  0.0\n",
-      "dot =  0j\n",
-      "Derivative ok\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb Cell 1\u001b[0m line \u001b[0;36m7\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m Scfs \u001b[39m=\u001b[39m ss(N_components, prec, khist)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=46'>47</a>\u001b[0m \u001b[39m# # print(\"testLC: \", utils.LeviCivita([1,2,3]), utils.LeviCivita([1,1,3]), utils.LeviCivita([2,1,3]))\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39m# print(\"Test spinors\")\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=48'>49</a>\u001b[0m \u001b[39m# spineur = spinor(Scfs.mra, 2)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=71'>72</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=72'>73</a>\u001b[0m \u001b[39m#initialise molecule geometry and properties\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=73'>74</a>\u001b[0m Scfs\u001b[39m.\u001b[39;49minitMolec(nOrb, R, Z, pathMol)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=74'>75</a>\u001b[0m \u001b[39m#run the SCF solver\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=75'>76</a>\u001b[0m \u001b[39m# Scfs.scfRun(thrs, True, True)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=76'>77</a>\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=88'>89</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=89'>90</a>\u001b[0m \u001b[39m# Scfs_pert.scfRun(thrs, True, True)\u001b[39;00m\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:113\u001b[0m, in \u001b[0;36mscfsolv.initMolec\u001b[0;34m(self, No, pos, Z, init_g_dir)\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mf_prev \u001b[39m=\u001b[39m [[] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mNorb)] \u001b[39m#list of the corrections at previous steps\u001b[39;00m\n\u001b[1;32m    108\u001b[0m \u001b[39m# print(\"Overlap init\")\u001b[39;00m\n\u001b[1;32m    109\u001b[0m \u001b[39m# print(\"S=\",self.computeOverlap())\u001b[39;00m\n\u001b[1;32m    110\u001b[0m \u001b[39m# TestImag = 1j*self.phi_prev[0][-1]\u001b[39;00m\n\u001b[1;32m    111\u001b[0m \u001b[39m# print(\"InitMolec test imag: \", complex_fcn.dot(self.phi_prev[0][-1],TestImag))\u001b[39;00m\n\u001b[1;32m    112\u001b[0m \u001b[39m#Compute the Fock matrix and potential operators \u001b[39;00m\n\u001b[0;32m--> 113\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcompFock()\n\u001b[1;32m    114\u001b[0m \u001b[39m# print(\"Fock = \", self.Fock)\u001b[39;00m\n\u001b[1;32m    115\u001b[0m \u001b[39m#Energies of each orbital\u001b[39;00m\n\u001b[1;32m    116\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mE_n \u001b[39m=\u001b[39m []\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:158\u001b[0m, in \u001b[0;36mscfsolv.compFock\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mNorb):\n\u001b[1;32m    156\u001b[0m     \u001b[39m#Compute the potential operator\u001b[39;00m\n\u001b[1;32m    157\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mK\u001b[39m.\u001b[39mappend(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcomputeExchangePotential(j))            \n\u001b[0;32m--> 158\u001b[0m     Fphi \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcompFop(j)\n\u001b[1;32m    159\u001b[0m     \u001b[39m# compute the energy from the orbitals \u001b[39;00m\n\u001b[1;32m    160\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mNorb):\n\u001b[1;32m    161\u001b[0m         \u001b[39m# self.Fock[i,j] = complex_fcn.dot(self.phi_prev[i][-1], Fphi) #TODO 2C\u001b[39;00m\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:176\u001b[0m, in \u001b[0;36mscfsolv.compFop\u001b[0;34m(self, orb)\u001b[0m\n\u001b[1;32m    174\u001b[0m     one\u001b[39m.\u001b[39mcompVect[j]\u001b[39m.\u001b[39mreal \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mP_eps(utils\u001b[39m.\u001b[39mFone)\n\u001b[1;32m    175\u001b[0m \u001b[39m#kappa operator\u001b[39;00m\n\u001b[0;32m--> 176\u001b[0m kappa \u001b[39m=\u001b[39m (one\u001b[39m-\u001b[39;49mV_z\u001b[39m/\u001b[39;49m(\u001b[39m2\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mc\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39m2\u001b[39;49m))\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m(\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m#TODO: There will be an error here because Integer - ftree is probably not defined\u001b[39;00m\n\u001b[1;32m    177\u001b[0m \u001b[39m#Kinetic operator computation \u001b[39;00m\n\u001b[1;32m    178\u001b[0m \u001b[39m#first scalar term: -0.5*kappa*nabla^2\u001b[39;00m\n\u001b[1;32m    179\u001b[0m kNab2 \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m0.5\u001b[39m \u001b[39m*\u001b[39m kappa \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mphi_prev[orb][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mderivative(\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mderivative(\u001b[39m0\u001b[39m)\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/spinor.py:76\u001b[0m, in \u001b[0;36mspinor.__pow__\u001b[0;34m(self, exponent)\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlength):\n\u001b[1;32m     75\u001b[0m     output\u001b[39m.\u001b[39mcompVect[i]\u001b[39m.\u001b[39mreal \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompVect[i]\u001b[39m.\u001b[39mreal\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m(exponent)\n\u001b[0;32m---> 76\u001b[0m     output\u001b[39m.\u001b[39mcompVect[i]\u001b[39m.\u001b[39mimag \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcompVect[i]\u001b[39m.\u001b[39;49mimag\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m(exponent)\n\u001b[1;32m     77\u001b[0m \u001b[39mreturn\u001b[39;00m output\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -36,6 +37,8 @@
     "prec = 1.0e-5\n",
     "khist = 5\n",
     "thrs = prec*10\n",
+    "\n",
+    "N_components = 2\n",
     "# Pord = 1 #maximum pertubation order computed\n",
     "\n",
     "# r_x = np.linspace(-16, 16, 10000) # create an evenly spaced set of points between -0.99 and 0.99\n",
@@ -63,7 +66,7 @@
     "nz = len(Z)\n",
     "\n",
     "#create scf solver instance with default MRA\n",
-    "Scfs = ss(prec, khist)\n",
+    "Scfs = ss(N_components, prec, khist)\n",
     "\n",
     "# # print(\"testLC: \", utils.LeviCivita([1,2,3]), utils.LeviCivita([1,1,3]), utils.LeviCivita([2,1,3]))\n",
     "# print(\"Test spinors\")\n",
