ZORA 2c works (ish?) with hydrogen, at least runs and converges to E=-0.5 AU

--- a/src/tut.ipynb
+++ b/src/tut.ipynb
@@ -2,22 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb Cell 1\u001b[0m line \u001b[0;36m7\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m Scfs \u001b[39m=\u001b[39m ss(N_components, prec, khist)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=46'>47</a>\u001b[0m \u001b[39m# # print(\"testLC: \", utils.LeviCivita([1,2,3]), utils.LeviCivita([1,1,3]), utils.LeviCivita([2,1,3]))\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39m# print(\"Test spinors\")\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=48'>49</a>\u001b[0m \u001b[39m# spineur = spinor(Scfs.mra, 2)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=71'>72</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=72'>73</a>\u001b[0m \u001b[39m#initialise molecule geometry and properties\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=73'>74</a>\u001b[0m Scfs\u001b[39m.\u001b[39;49minitMolec(nOrb, R, Z, pathMol)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=74'>75</a>\u001b[0m \u001b[39m#run the SCF solver\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=75'>76</a>\u001b[0m \u001b[39m# Scfs.scfRun(thrs, True, True)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=76'>77</a>\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=88'>89</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwoolf.chem.uit.no/home/qpitto/Tests_KAIN/ZORA/response/src/tut.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=89'>90</a>\u001b[0m \u001b[39m# Scfs_pert.scfRun(thrs, True, True)\u001b[39;00m\n",
-      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:113\u001b[0m, in \u001b[0;36mscfsolv.initMolec\u001b[0;34m(self, No, pos, Z, init_g_dir)\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mf_prev \u001b[39m=\u001b[39m [[] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mNorb)] \u001b[39m#list of the corrections at previous steps\u001b[39;00m\n\u001b[1;32m    108\u001b[0m \u001b[39m# print(\"Overlap init\")\u001b[39;00m\n\u001b[1;32m    109\u001b[0m \u001b[39m# print(\"S=\",self.computeOverlap())\u001b[39;00m\n\u001b[1;32m    110\u001b[0m \u001b[39m# TestImag = 1j*self.phi_prev[0][-1]\u001b[39;00m\n\u001b[1;32m    111\u001b[0m \u001b[39m# print(\"InitMolec test imag: \", complex_fcn.dot(self.phi_prev[0][-1],TestImag))\u001b[39;00m\n\u001b[1;32m    112\u001b[0m \u001b[39m#Compute the Fock matrix and potential operators \u001b[39;00m\n\u001b[0;32m--> 113\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcompFock()\n\u001b[1;32m    114\u001b[0m \u001b[39m# print(\"Fock = \", self.Fock)\u001b[39;00m\n\u001b[1;32m    115\u001b[0m \u001b[39m#Energies of each orbital\u001b[39;00m\n\u001b[1;32m    116\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mE_n \u001b[39m=\u001b[39m []\n",
-      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:158\u001b[0m, in \u001b[0;36mscfsolv.compFock\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mNorb):\n\u001b[1;32m    156\u001b[0m     \u001b[39m#Compute the potential operator\u001b[39;00m\n\u001b[1;32m    157\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mK\u001b[39m.\u001b[39mappend(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcomputeExchangePotential(j))            \n\u001b[0;32m--> 158\u001b[0m     Fphi \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcompFop(j)\n\u001b[1;32m    159\u001b[0m     \u001b[39m# compute the energy from the orbitals \u001b[39;00m\n\u001b[1;32m    160\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mNorb):\n\u001b[1;32m    161\u001b[0m         \u001b[39m# self.Fock[i,j] = complex_fcn.dot(self.phi_prev[i][-1], Fphi) #TODO 2C\u001b[39;00m\n",
-      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:176\u001b[0m, in \u001b[0;36mscfsolv.compFop\u001b[0;34m(self, orb)\u001b[0m\n\u001b[1;32m    174\u001b[0m     one\u001b[39m.\u001b[39mcompVect[j]\u001b[39m.\u001b[39mreal \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mP_eps(utils\u001b[39m.\u001b[39mFone)\n\u001b[1;32m    175\u001b[0m \u001b[39m#kappa operator\u001b[39;00m\n\u001b[0;32m--> 176\u001b[0m kappa \u001b[39m=\u001b[39m (one\u001b[39m-\u001b[39;49mV_z\u001b[39m/\u001b[39;49m(\u001b[39m2\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mc\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39m2\u001b[39;49m))\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m(\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m#TODO: There will be an error here because Integer - ftree is probably not defined\u001b[39;00m\n\u001b[1;32m    177\u001b[0m \u001b[39m#Kinetic operator computation \u001b[39;00m\n\u001b[1;32m    178\u001b[0m \u001b[39m#first scalar term: -0.5*kappa*nabla^2\u001b[39;00m\n\u001b[1;32m    179\u001b[0m kNab2 \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m0.5\u001b[39m \u001b[39m*\u001b[39m kappa \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mphi_prev[orb][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mderivative(\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mderivative(\u001b[39m0\u001b[39m)\n",
-      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/spinor.py:76\u001b[0m, in \u001b[0;36mspinor.__pow__\u001b[0;34m(self, exponent)\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlength):\n\u001b[1;32m     75\u001b[0m     output\u001b[39m.\u001b[39mcompVect[i]\u001b[39m.\u001b[39mreal \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompVect[i]\u001b[39m.\u001b[39mreal\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m(exponent)\n\u001b[0;32m---> 76\u001b[0m     output\u001b[39m.\u001b[39mcompVect[i]\u001b[39m.\u001b[39mimag \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcompVect[i]\u001b[39m.\u001b[39;49mimag\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m(exponent)\n\u001b[1;32m     77\u001b[0m \u001b[39mreturn\u001b[39;00m output\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start initMolec\n",
+      "compute Coulomb onlz 1 e\n",
+      "compute K only 1 e\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/qpitto/Tests_KAIN/ZORA/response/src/scfsolv.py:146: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  self.G_mu.append(vp.HelmholtzOperator(self.mra, mu, self.prec))  # Initalize the operator\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  length update history:  1\n",
+      "scf run\n",
+      "=============Iteration: 0\n",
+      "F= [[-0.49423764+1.71076966e-19j]]\n",
+      "S= [[1.+0.j]]\n",
+      "expand sol no kain\n",
+      "compute Coulomb onlz 1 e\n",
+      "compute K only 1 e\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/qpitto/Tests_KAIN/ZORA/response/src/scfsolv.py:454: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  mu = np.sqrt(-2*self.E_n[orb])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length 1 1\n",
+      "Orbital: 0    Norm: [0.99446342]    Update: [0.01588708]    Energy:[-0.49938137+1.84385661e-19j]\n",
+      "=============Iteration: 1\n",
+      "F= [[-0.49938137+1.84385661e-19j]]\n",
+      "S= [[1.+0.j]]\n",
+      "expand sol no kain\n",
+      "compute Coulomb onlz 1 e\n",
+      "compute K only 1 e\n",
+      "length 1 1\n",
+      "Orbital: 0    Norm: [0.99694536]    Update: [0.00615977]    Energy:[-0.49992427+2.30901709e-19j]\n",
+      "=============Iteration: 2\n",
+      "F= [[-0.49992427+2.30901709e-19j]]\n",
+      "S= [[1.+0.j]]\n",
+      "expand sol no kain\n",
+      "compute Coulomb onlz 1 e\n",
+      "compute K only 1 e\n",
+      "length 1 1\n",
+      "Orbital: 0    Norm: [0.99842113]    Update: [0.00284164]    Energy:[-0.50001757+2.51426013e-19j]\n",
+      "=============Iteration: 3\n",
+      "F= [[-0.50001757+2.51426013e-19j]]\n",
+      "S= [[1.+0.j]]\n",
+      "expand sol no kain\n",
+      "compute Coulomb onlz 1 e\n",
+      "compute K only 1 e\n",
+      "length 1 1\n",
+      "Orbital: 0    Norm: [0.99920079]    Update: [0.00142928]    Energy:[-0.50003677+2.50091859e-19j]\n",
+      "=============Iteration: 4\n",
+      "F= [[-0.50003677+2.50091859e-19j]]\n",
+      "S= [[1.+0.j]]\n",
+      "expand sol no kain\n",
+      "compute Coulomb onlz 1 e\n",
+      "compute K only 1 e\n",
+      "length 1 1\n",
+      "Orbital: 0    Norm: [0.99959905]    Update: [0.00073495]    Energy:[-0.50004118+2.53324697e-19j]\n"
      ]
     }
    ],
@@ -34,8 +105,8 @@
     "from scfsolv import scfsolv_1stpert as ss1\n",
     "\n",
     "\n",
-    "prec = 1.0e-5\n",
-    "khist = 5\n",
+    "prec = 1.0e-4\n",
+    "khist = 0\n",
     "thrs = prec*10\n",
     "\n",
     "N_components = 2\n",
@@ -45,15 +116,20 @@
     "# r_y = np.linspace(-16, 16, 10000)\n",
     "# r_z = np.linspace(-16, 16, 10000)\n",
     "# r = [r_x, r_y, r_z]\n",
-    "\n",
+    "Restricted = True\n",
     "\n",
     "\n",
     "# Electric_field = [0.01, 0., 0.]\n",
     "Electric_field = [0.01, 0., 0.]\n",
     "# Analytic nuclear potential\n",
     "# print(\"pouet\")\n",
+    "R, Z, pathMol, nOrb, Restricted = [[0.1, 0.100, 0.100]], [1], \"/home/qpitto/Tests_KAIN/test_H/norun/orbitals/\", 1, False #Initial guess\n",
+    "#He \n",
+    "# R, Z, pathMol, nOrb = [[0.1, 0.100, 0.100]], [2], \"/home/qpitto/Tests_KAIN/test_He/norun/orbitals/\", 1 #Initial guess\n",
+    "#H2\n",
+    "# R, Z, pathMol, nOrb = [[0.73699313, 0.100, 0.100], [-0.73699313, 0.100, 0.100]], [1,1], \"/home/qpitto/Tests_KAIN/test_H2/norun/orbitals/\", 1 #Initial guess\n",
     "#LiH\n",
-    "R, Z, pathMol, nOrb = [[1.508001,  0.188973, 0.188973], [-1.508001,  0.188973, 0.188973]], [3,1], \"/home/qpitto/Tests_KAIN/test_LiH/norun/orbitals/\", 2 #Initial guess\n",
+    "# R, Z, pathMol, nOrb = [[1.508001,  0.188973, 0.188973], [-1.508001,  0.188973, 0.188973]], [3,1], \"/home/qpitto/Tests_KAIN/test_LiH/norun/orbitals/\", 2 #Initial guess\n",
     "# R, Z, pathMol, nOrb = [[1.508001,  0.188973, 0.188973], [-1.508001,  0.188973, 0.188973]], [3,1], \"/home/qpitto/Tests_KAIN/test_LiH/run/orbitals/\", 2 #LiH\n",
     "#Ne\n",
     "# R, Z, pathMol, nOrb = [[0.100, 0.100, 0.100]], [10], \"/home/qpitto/Tests_KAIN/test_Ne/norun/orbitals/phi_p_scf_\", 5 #Ne\n",
@@ -95,9 +171,10 @@
     "# print(np.linalg.eig(tut))\n",
     "\n",
     "#initialise molecule geometry and properties\n",
-    "Scfs.initMolec(nOrb, R, Z, pathMol)\n",
+    "print(\"start initMolec\")\n",
+    "Scfs.initMolec(nOrb, R, Z, pathMol, Restricted)\n",
     "#run the SCF solver\n",
-    "# Scfs.scfRun(thrs, True, True)\n",
+    "Scfs.scfRun(thrs, True, True)\n",
     "\n",
     "# print(\"Sanity test\")\n",
     "# for i in range(len(Scfs.phi_prev)):\n",
@@ -115,10 +192,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -138,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.19"
   },
   "orig_nbformat": 4
  },
