--- a/src/tut.ipynb
+++ b/src/tut.ipynb
@@ -16,16 +16,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start initMolec\n",
-      "compute Coulomb onlz 1 e\n",
-      "compute K only 1 e\n"
+      "start initMolec\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/qpitto/Tests_KAIN/ZORA/response/src/scfsolv.py:146: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/home/qpitto/Tests_KAIN/ZORA/response/src/scfsolv.py:147: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  self.G_mu.append(vp.HelmholtzOperator(self.mra, mu, self.prec))  # Initalize the operator\n"
      ]
     },
@@ -33,62 +31,216 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.0000000e+00+0.j -6.7536764e-09+0.j]\n",
+      " [-6.7536764e-09-0.j  1.0000000e+00+0.j]]\n",
       "0  length update history:  1\n",
+      "1  length update history:  1\n",
+      "Init molec S= [[ 1.0000000e+00+0.j -6.7536764e-09+0.j]\n",
+      " [-6.7536764e-09-0.j  1.0000000e+00+0.j]]\n",
       "scf run\n",
       "=============Iteration: 0\n",
-      "F= [[-0.49423764+1.71076966e-19j]]\n",
-      "S= [[1.+0.j]]\n",
+      "F= [[-2.7896489 +0.j  0.00707083+0.j]\n",
+      " [ 0.00704288+0.j -1.11828297+0.j]]\n",
+      "S= [[ 1.0000000e+00+0.j -6.7536764e-09+0.j]\n",
+      " [-6.7536764e-09-0.j  1.0000000e+00+0.j]]\n",
       "expand sol no kain\n",
-      "compute Coulomb onlz 1 e\n",
-      "compute K only 1 e\n"
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.00000000e+00+0.j -2.22509245e-15+0.j]\n",
+      " [-2.22509245e-15-0.j  1.00000000e+00+0.j]]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/qpitto/Tests_KAIN/ZORA/response/src/scfsolv.py:454: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  mu = np.sqrt(-2*self.E_n[orb])\n"
+      "/home/qpitto/Tests_KAIN/ZORA/response/src/scfsolv.py:485: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  self.G_mu[orb] = vp.HelmholtzOperator(self.mra, mu, self.prec)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "length 1 1\n",
-      "Orbital: 0    Norm: [0.99446342]    Update: [0.01588708]    Energy:[-0.49938137+1.84385661e-19j]\n",
+      "length 2 1\n",
+      "length 2 1\n",
+      "Fock [[-2.7512659 +0.j  0.09587204+0.j]\n",
+      " [ 0.09599732+0.j -1.18457633+0.j]]\n",
+      "Kinetic [[3.60633018+0.j 0.52749378+0.j]\n",
+      " [0.4900548 +0.j 0.44784086+0.j]]\n",
+      "Coulomb [[2.03243003+0.j 0.03830488+0.j]\n",
+      " [0.03830488+0.j 0.96973757+0.j]]\n",
+      "Exchange [[ 0.00998311+0.j -0.0246844 +0.j]\n",
+      " [-0.02469199+0.j  0.58539814+0.j]]\n",
+      "Orbital: 0    Norm: [1.00093497 0.98912272]    Update: [0.01315187 0.0873156 ]    Energy:[-2.76352922+0.j -1.16460794+0.j]\n",
+      "Orbital: 1    Norm: [1.00093497 0.98912272]    Update: [0.01315187 0.0873156 ]    Energy:[-2.76352922+0.j -1.16460794+0.j]\n",
       "=============Iteration: 1\n",
-      "F= [[-0.49938137+1.84385661e-19j]]\n",
-      "S= [[1.+0.j]]\n",
+      "F= [[-2.7512659 +0.j  0.09587204+0.j]\n",
+      " [ 0.09599732+0.j -1.18457633+0.j]]\n",
+      "S= [[ 1.        +0.j -0.03197274+0.j]\n",
+      " [-0.03197274-0.j  1.        +0.j]]\n",
       "expand sol no kain\n",
-      "compute Coulomb onlz 1 e\n",
-      "compute K only 1 e\n",
-      "length 1 1\n",
-      "Orbital: 0    Norm: [0.99694536]    Update: [0.00615977]    Energy:[-0.49992427+2.30901709e-19j]\n",
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.00000000e+00+0.j -1.19379216e-08+0.j]\n",
+      " [-1.19379216e-08-0.j  1.00000000e+00+0.j]]\n",
+      "length 2 1\n",
+      "length 2 1\n",
+      "Fock [[-2.74188496+0.j  0.10694739+0.j]\n",
+      " [ 0.10706694+0.j -1.19203508+0.j]]\n",
+      "Kinetic [[3.60597925+0.j 0.55574296+0.j]\n",
+      " [0.48996809+0.j 0.46248231+0.j]]\n",
+      "Coulomb [[2.04260726+0.j 0.03487827+0.j]\n",
+      " [0.03487827+0.j 1.00342529+0.j]]\n",
+      "Exchange [[ 0.01110017+0.j -0.02790624+0.j]\n",
+      " [-0.02790735+0.j  0.60834315+0.j]]\n",
+      "Orbital: 0    Norm: [1.00166928 0.99444622]    Update: [0.01723075 0.05547025]    Energy:[-2.74711876+0.j -1.1835363 +0.j]\n",
+      "Orbital: 1    Norm: [1.00166928 0.99444622]    Update: [0.01723075 0.05547025]    Energy:[-2.74711876+0.j -1.1835363 +0.j]\n",
       "=============Iteration: 2\n",
-      "F= [[-0.49992427+2.30901709e-19j]]\n",
-      "S= [[1.+0.j]]\n",
+      "F= [[-2.74188496+0.j  0.10694739+0.j]\n",
+      " [ 0.10706694+0.j -1.19203508+0.j]]\n",
+      "S= [[ 1.        +0.j -0.03593643+0.j]\n",
+      " [-0.03593643-0.j  1.        +0.j]]\n",
       "expand sol no kain\n",
-      "compute Coulomb onlz 1 e\n",
-      "compute K only 1 e\n",
-      "length 1 1\n",
-      "Orbital: 0    Norm: [0.99842113]    Update: [0.00284164]    Energy:[-0.50001757+2.51426013e-19j]\n",
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.00000000e+00+0.j -1.41725404e-08+0.j]\n",
+      " [-1.41725404e-08-0.j  1.00000000e+00+0.j]]\n",
+      "length 2 1\n",
+      "length 2 1\n",
+      "Fock [[-2.73577594+0.j  0.10590132+0.j]\n",
+      " [ 0.10593085+0.j -1.19454533+0.j]]\n",
+      "Kinetic [[3.60560888+0.j 0.58230775+0.j]\n",
+      " [0.48994842+0.j 0.47207373+0.j]]\n",
+      "Coulomb [[2.04953412+0.j 0.03796391+0.j]\n",
+      " [0.03796391+0.j 1.02387974+0.j]]\n",
+      "Exchange [[ 0.0122087 +0.j -0.02886258+0.j]\n",
+      " [-0.02886394+0.j  0.6214054 +0.j]]\n",
+      "Orbital: 0    Norm: [1.00199437 0.99849076]    Update: [0.01856303 0.03609473]    Energy:[-2.73694809+0.j -1.19074329+0.j]\n",
+      "Orbital: 1    Norm: [1.00199437 0.99849076]    Update: [0.01856303 0.03609473]    Energy:[-2.73694809+0.j -1.19074329+0.j]\n",
       "=============Iteration: 3\n",
-      "F= [[-0.50001757+2.51426013e-19j]]\n",
-      "S= [[1.+0.j]]\n",
+      "F= [[-2.73577594+0.j  0.10590132+0.j]\n",
+      " [ 0.10593085+0.j -1.19454533+0.j]]\n",
+      "S= [[ 1.        +0.j -0.03564128+0.j]\n",
+      " [-0.03564128-0.j  1.        +0.j]]\n",
       "expand sol no kain\n",
-      "compute Coulomb onlz 1 e\n",
-      "compute K only 1 e\n",
-      "length 1 1\n",
-      "Orbital: 0    Norm: [0.99920079]    Update: [0.00142928]    Energy:[-0.50003677+2.50091859e-19j]\n",
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.00000000e+00+0.j -1.49411204e-08+0.j]\n",
+      " [-1.49411204e-08-0.j  1.00000000e+00+0.j]]\n",
+      "length 2 1\n",
+      "length 2 1\n",
+      "Fock [[-2.73179506+0.j  0.09722414+0.j]\n",
+      " [ 0.09725226+0.j -1.1951914 +0.j]]\n",
+      "Kinetic [[3.60534117+0.j 0.60515364+0.j]\n",
+      " [0.48990828+0.j 0.47853475+0.j]]\n",
+      "Coulomb [[2.05437471+0.j 0.04480546+0.j]\n",
+      " [0.04480546+0.j 1.03637233+0.j]]\n",
+      "Exchange [[ 0.013259  +0.j -0.02838117+0.j]\n",
+      " [-0.02838275+0.j  0.6287682 +0.j]]\n",
+      "Orbital: 0    Norm: [1.00203436 1.0009899 ]    Update: [0.01807007 0.02448375]    Energy:[-2.73075576+0.j -1.19332972+0.j]\n",
+      "Orbital: 1    Norm: [1.00203436 1.0009899 ]    Update: [0.01807007 0.02448375]    Energy:[-2.73075576+0.j -1.19332972+0.j]\n",
       "=============Iteration: 4\n",
-      "F= [[-0.50003677+2.50091859e-19j]]\n",
-      "S= [[1.+0.j]]\n",
+      "F= [[-2.73179506+0.j  0.09722414+0.j]\n",
+      " [ 0.09725226+0.j -1.1951914 +0.j]]\n",
+      "S= [[ 1.       +0.j -0.0327755+0.j]\n",
+      " [-0.0327755-0.j  1.       +0.j]]\n",
       "expand sol no kain\n",
-      "compute Coulomb onlz 1 e\n",
-      "compute K only 1 e\n",
-      "length 1 1\n",
-      "Orbital: 0    Norm: [0.99959905]    Update: [0.00073495]    Energy:[-0.50004118+2.53324697e-19j]\n"
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.00000000e+00+0.j -1.42034206e-08+0.j]\n",
+      " [-1.42034206e-08-0.j  1.00000000e+00+0.j]]\n",
+      "length 2 1\n",
+      "length 2 1\n",
+      "Fock [[-2.72925862+0.j  0.08403012+0.j]\n",
+      " [ 0.08406182+0.j -1.19521572+0.j]]\n",
+      "Kinetic [[3.60518863+0.j 0.62376503+0.j]\n",
+      " [0.48984302+0.j 0.48306033+0.j]]\n",
+      "Coulomb [[2.05780934+0.j 0.05367651+0.j]\n",
+      " [0.05367651+0.j 1.04411126+0.j]]\n",
+      "Exchange [[ 0.01424817+0.j -0.02700553+0.j]\n",
+      " [-0.02700729+0.j  0.63294795+0.j]]\n",
+      "Orbital: 0    Norm: [1.00188732 1.00222037]    Update: [0.01641533 0.01731166]    Energy:[-2.72716451+0.j -1.19422256+0.j]\n",
+      "Orbital: 1    Norm: [1.00188732 1.00222037]    Update: [0.01641533 0.01731166]    Energy:[-2.72716451+0.j -1.19422256+0.j]\n",
+      "=============Iteration: 5\n",
+      "F= [[-2.72925862+0.j  0.08403012+0.j]\n",
+      " [ 0.08406182+0.j -1.19521572+0.j]]\n",
+      "S= [[ 1.        +0.j -0.02837487+0.j]\n",
+      " [-0.02837487-0.j  1.        +0.j]]\n",
+      "expand sol no kain\n",
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.00000000e+00+0.j -1.25100513e-08+0.j]\n",
+      " [-1.25100513e-08-0.j  1.00000000e+00+0.j]]\n",
+      "length 2 1\n",
+      "length 2 1\n",
+      "Fock [[-2.72773015+0.j  0.0684655 +0.j]\n",
+      " [ 0.06849925+0.j -1.19511098+0.j]]\n",
+      "Kinetic [[3.60512067+0.j 0.63815274+0.j]\n",
+      " [0.4897608 +0.j 0.48635203+0.j]]\n",
+      "Coulomb [[2.06024847+0.j 0.06338046+0.j]\n",
+      " [0.06338046+0.j 1.04901825+0.j]]\n",
+      "Exchange [[ 0.01517528+0.j -0.02512405+0.j]\n",
+      " [-0.02512594+0.j  0.63541261+0.j]]\n",
+      "Orbital: 0    Norm: [1.00162793 1.00256727]    Update: [0.0140633  0.01255932]    Energy:[-2.72529772+0.j -1.19455919+0.j]\n",
+      "Orbital: 1    Norm: [1.00162793 1.00256727]    Update: [0.0140633  0.01255932]    Energy:[-2.72529772+0.j -1.19455919+0.j]\n",
+      "=============Iteration: 6\n",
+      "F= [[-2.72773015+0.j  0.0684655 +0.j]\n",
+      " [ 0.06849925+0.j -1.19511098+0.j]]\n",
+      "S= [[ 1.        +0.j -0.02315997+0.j]\n",
+      " [-0.02315997-0.j  1.        +0.j]]\n",
+      "expand sol no kain\n",
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.00000000e+00+0.j -1.08030247e-08+0.j]\n",
+      " [-1.08030247e-08-0.j  1.00000000e+00+0.j]]\n",
+      "length 2 1\n",
+      "length 2 1\n",
+      "Fock [[-2.72691455+0.j  0.0521247 +0.j]\n",
+      " [ 0.05215966+0.j -1.19505204+0.j]]\n",
+      "Kinetic [[3.60509557+0.j 0.64853574+0.j]\n",
+      " [0.48966603+0.j 0.4888079 +0.j]]\n",
+      "Coulomb [[2.06194722+0.j 0.0730482 +0.j]\n",
+      " [0.0730482 +0.j 1.05222882+0.j]]\n",
+      "Exchange [[ 0.01603043+0.j -0.02302723+0.j]\n",
+      " [-0.02302925+0.j  0.63699287+0.j]]\n",
+      "Orbital: 0    Norm: [1.0013135  1.00237219]    Update: [0.01136318 0.00923627]    Energy:[-2.72456847+0.j -1.19474616+0.j]\n",
+      "Orbital: 1    Norm: [1.0013135  1.00237219]    Update: [0.01136318 0.00923627]    Energy:[-2.72456847+0.j -1.19474616+0.j]\n",
+      "=============Iteration: 7\n",
+      "F= [[-2.72691455+0.j  0.0521247 +0.j]\n",
+      " [ 0.05215966+0.j -1.19505204+0.j]]\n",
+      "S= [[ 1.        +0.j -0.01766937+0.j]\n",
+      " [-0.01766937-0.j  1.        +0.j]]\n",
+      "expand sol no kain\n",
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.0000000e+00+0.j -8.2871498e-09+0.j]\n",
+      " [-8.2871498e-09-0.j  1.0000000e+00+0.j]]\n",
+      "length 2 1\n",
+      "length 2 1\n",
+      "Fock [[-2.72659906+0.j  0.03615142+0.j]\n",
+      " [ 0.03621192+0.j -1.19508038+0.j]]\n",
+      "Kinetic [[3.60508773+0.j 0.6552622 +0.j]\n",
+      " [0.48957312+0.j 0.49065436+0.j]]\n",
+      "Coulomb [[2.06308032+0.j 0.08209076+0.j]\n",
+      " [0.08209076+0.j 1.0544061 +0.j]]\n",
+      "Exchange [[ 0.01679619+0.j -0.02091466+0.j]\n",
+      " [-0.02091674+0.j  0.63814188+0.j]]\n",
+      "Orbital: 0    Norm: [1.00098426 1.00188951]    Update: [0.0085629  0.00700201]    Energy:[-2.72457132+0.j -1.19490918+0.j]\n",
+      "Orbital: 1    Norm: [1.00098426 1.00188951]    Update: [0.0085629  0.00700201]    Energy:[-2.72457132+0.j -1.19490918+0.j]\n",
+      "=============Iteration: 8\n",
+      "F= [[-2.72659906+0.j  0.03615142+0.j]\n",
+      " [ 0.03621192+0.j -1.19508038+0.j]]\n",
+      "S= [[ 1.        +0.j -0.01228533+0.j]\n",
+      " [-0.01228533-0.j  1.        +0.j]]\n",
+      "expand sol no kain\n",
+      "orthonorm\n",
+      "Post-Ortho S= [[ 1.00000000e+00+0.j -5.78649125e-09+0.j]\n",
+      " [-5.78649125e-09-0.j  1.00000000e+00+0.j]]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -106,7 +258,7 @@
     "\n",
     "\n",
     "prec = 1.0e-4\n",
-    "khist = 0\n",
+    "khist = 4\n",
     "thrs = prec*10\n",
     "\n",
     "N_components = 2\n",
@@ -123,14 +275,14 @@
     "Electric_field = [0.01, 0., 0.]\n",
     "# Analytic nuclear potential\n",
     "# print(\"pouet\")\n",
-    "R, Z, pathMol, nOrb, Restricted = [[0.1, 0.100, 0.100]], [1], \"/home/qpitto/Tests_KAIN/test_H/norun/orbitals/\", 1, False #Initial guess\n",
+    "# R, Z, pathMol, nOrb, Restricted = [[0.1, 0.100, 0.100]], [1], \"/home/qpitto/Tests_KAIN/test_H/norun/orbitals/\", 1, False #Initial guess\n",
     "#He \n",
     "# R, Z, pathMol, nOrb = [[0.1, 0.100, 0.100]], [2], \"/home/qpitto/Tests_KAIN/test_He/norun/orbitals/\", 1 #Initial guess\n",
     "#H2\n",
     "# R, Z, pathMol, nOrb = [[0.73699313, 0.100, 0.100], [-0.73699313, 0.100, 0.100]], [1,1], \"/home/qpitto/Tests_KAIN/test_H2/norun/orbitals/\", 1 #Initial guess\n",
     "#LiH\n",
     "# R, Z, pathMol, nOrb = [[1.508001,  0.188973, 0.188973], [-1.508001,  0.188973, 0.188973]], [3,1], \"/home/qpitto/Tests_KAIN/test_LiH/norun/orbitals/\", 2 #Initial guess\n",
-    "# R, Z, pathMol, nOrb = [[1.508001,  0.188973, 0.188973], [-1.508001,  0.188973, 0.188973]], [3,1], \"/home/qpitto/Tests_KAIN/test_LiH/run/orbitals/\", 2 #LiH\n",
+    "R, Z, pathMol, nOrb = [[1.508001,  0.188973, 0.188973], [-1.508001,  0.188973, 0.188973]], [3,1], \"/home/qpitto/Tests_KAIN/test_LiH/run/orbitals/\", 2 #LiH\n",
     "#Ne\n",
     "# R, Z, pathMol, nOrb = [[0.100, 0.100, 0.100]], [10], \"/home/qpitto/Tests_KAIN/test_Ne/norun/orbitals/phi_p_scf_\", 5 #Ne\n",
     "#H2O\n",
@@ -195,6 +347,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2.72793954-8.35624316e-05j -1.19203287-1.35330094e-05j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# F= [[-2.7896489 -2.66352263e-07j, 0.00707083+5.25880281e-08j],[ 0.00704288-1.01844084e-07j, -1.11828297+1.44609334e-08j]] #initial\n",
+    "F=np.array([[-2.7263095 -9.37847108e-05j, -0.04998474+1.23454107e-03j],\n",
+    " [-0.05001107-9.24036599e-04j, -1.19366291-3.31073015e-06j]]) #final (no kain)\n",
+    "eigvals, U = np.linalg.eig(F)\n",
+    "print(eigvals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaled energy (4C Dirac energy) -0.500019492659299\n",
+      "Dirac ground state energy of Hydrogen -0.4999998852320873\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Scaled energy (4C Dirac energy)\", (1/(-0.50003281) - 1/(137.02**2))**(-1))\n",
+    "print(\"Dirac ground state energy of Hydrogen\",-13.60569/27.211386245988) #On numerator: E_gs in eV, denominator: conversion factor"
+   ]
   }
  ],
  "metadata": {
