--- a/src/tut.ipynb
+++ b/src/tut.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,103 +20,25 @@
       "kappa compo 0\n",
       "kappa compo 1\n",
       "kappa after\n",
-      "---------derivative kappa = \n",
-      "*FunctionTree: nn\n",
-      "  genNodes: 0\n",
-      "  square norm: 0.00175952\n",
-      "  root scale: -4\n",
-      "  order: 6\n",
-      "  nodes: 664\n",
-      "  endNodes: 582\n",
-      "  nodes per scale: \n",
-      "    scale=-4  nodes=8\n",
-      "    scale=-3  nodes=64\n",
-      "    scale=-2  nodes=128\n",
-      "    scale=-1  nodes=64\n",
-      "    scale=0  nodes=64\n",
-      "    scale=1  nodes=64\n",
-      "    scale=2  nodes=48\n",
-      "    scale=3  nodes=24\n",
-      "    scale=4  nodes=48\n",
-      "    scale=5  nodes=24\n",
-      "    scale=6  nodes=56\n",
-      "    scale=7  nodes=24\n",
-      "    scale=8  nodes=24\n",
-      "    scale=9  nodes=24\n",
-      " \n",
-      "*FunctionTree: nn\n",
-      "  genNodes: 0\n",
-      "  square norm: 0.00175952\n",
-      "  root scale: -4\n",
-      "  order: 6\n",
-      "  nodes: 664\n",
-      "  endNodes: 582\n",
-      "  nodes per scale: \n",
-      "    scale=-4  nodes=8\n",
-      "    scale=-3  nodes=64\n",
-      "    scale=-2  nodes=128\n",
-      "    scale=-1  nodes=64\n",
-      "    scale=0  nodes=64\n",
-      "    scale=1  nodes=64\n",
-      "    scale=2  nodes=48\n",
-      "    scale=3  nodes=24\n",
-      "    scale=4  nodes=48\n",
-      "    scale=5  nodes=24\n",
-      "    scale=6  nodes=56\n",
-      "    scale=7  nodes=24\n",
-      "    scale=8  nodes=24\n",
-      "    scale=9  nodes=24\n",
-      " \n",
-      "*FunctionTree: nn\n",
-      "  genNodes: 0\n",
-      "  square norm: 0.00175952\n",
-      "  root scale: -4\n",
-      "  order: 6\n",
-      "  nodes: 664\n",
-      "  endNodes: 582\n",
-      "  nodes per scale: \n",
-      "    scale=-4  nodes=8\n",
-      "    scale=-3  nodes=64\n",
-      "    scale=-2  nodes=128\n",
-      "    scale=-1  nodes=64\n",
-      "    scale=0  nodes=64\n",
-      "    scale=1  nodes=64\n",
-      "    scale=2  nodes=48\n",
-      "    scale=3  nodes=24\n",
-      "    scale=4  nodes=48\n",
-      "    scale=5  nodes=24\n",
-      "    scale=6  nodes=56\n",
-      "    scale=7  nodes=24\n",
-      "    scale=8  nodes=24\n",
-      "    scale=9  nodes=24\n",
-      "\n",
       "================kappadone==================\n",
-      "compFop kappa done\n",
-      "compFop NabkNab done\n",
-      "compFop sporb done\n",
-      "CompFop real 0 (0.42107845424205326+0j)\n",
-      "Fock [[-0.49622245+1.73188136e-20j]]\n",
-      "Kinetic [[0.45912612+1.73188656e-20j]]\n",
-      "Vnuc [[-0.95534857+0.j]]\n",
-      "Coulomb [[0.+0.j]]\n",
-      "Exchange [[0.+0.j]]\n",
-      "Kramer pair overlap [[0.+0.j]]\n",
-      "pouet\n",
-      "compute Coulomb onlz 1 e\n",
-      "compFock main loop 0\n",
-      "compute Korb only 1 e\n",
-      "kappa compo 0\n"
+      "compFop kappa done\n"
      ]
     },
     {
-     "ename": "",
+     "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 83\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;66;03m# print(\"testLC: \", utils.LeviCivita([1,2,3]), utils.LeviCivita([1,1,3]), utils.LeviCivita([2,1,3]))\u001b[39;00m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m# from spinor import spinor\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# print(\"Test spinors\")\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     80\u001b[0m \n\u001b[1;32m     81\u001b[0m \u001b[38;5;66;03m#initialise molecule geometry and properties\u001b[39;00m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstart initMolec\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 83\u001b[0m \u001b[43mScfs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minitMolec\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnOrb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpathMol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRestricted\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscalar\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     84\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minit done\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     85\u001b[0m \u001b[38;5;66;03m#run the SCF solver\u001b[39;00m\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:148\u001b[0m, in \u001b[0;36mscfsolv.initMolec\u001b[0;34m(self, No, pos, Z, source_init_guess, restricted, sclr, copy_orbitals)\u001b[0m\n\u001b[1;32m    145\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mphi_prev\u001b[38;5;241m.\u001b[39mappend([phi])\n\u001b[1;32m    146\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf_prev \u001b[38;5;241m=\u001b[39m [[] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mNspinor)] \u001b[38;5;66;03m#list of the corrections at previous steps\u001b[39;00m\n\u001b[0;32m--> 148\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprintOperators\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    149\u001b[0m \u001b[38;5;66;03m# print(\"Test Pauli matrix multiplication\")\u001b[39;00m\n\u001b[1;32m    150\u001b[0m \u001b[38;5;66;03m# #TODO\u001b[39;00m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;66;03m# for i in range(self.Nspinor):\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    166\u001b[0m \u001b[38;5;66;03m#Compute the Fock matrix and potential operators \u001b[39;00m\n\u001b[1;32m    167\u001b[0m \u001b[38;5;66;03m# print(\"Fock start\")\u001b[39;00m\n\u001b[1;32m    168\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpouet\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:938\u001b[0m, in \u001b[0;36mscfsolv.printOperators\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    937\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mprintOperators\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m--> 938\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompFock\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    939\u001b[0m     kinetic \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mNspinor,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mNspinor), dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mcomplex\u001b[39m)\n\u001b[1;32m    940\u001b[0m     Vnuc \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mNspinor,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mNspinor), dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mcomplex\u001b[39m)\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:228\u001b[0m, in \u001b[0;36mscfsolv.compFock\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    226\u001b[0m \u001b[38;5;66;03m#Compute the potential operator\u001b[39;00m\n\u001b[1;32m    227\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mK\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcomputeExchangePotential(j))            \n\u001b[0;32m--> 228\u001b[0m Fphi \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompFop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    229\u001b[0m \u001b[38;5;66;03m# compute the energy from the orbitals \u001b[39;00m\n\u001b[1;32m    230\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mNspinor):\n\u001b[1;32m    231\u001b[0m     \u001b[38;5;66;03m# self.Fock[i,j] = complex_fcn.dot(self.phi_prev[i][-1], Fphi) #TODO 2C\u001b[39;00m\n\u001b[1;32m    232\u001b[0m     \u001b[38;5;66;03m# print(\"compFock val\", self.phi_prev[i][-1].dot(self.Vnuc * self.phi_prev[j][-1]))\u001b[39;00m\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/scfsolv.py:325\u001b[0m, in \u001b[0;36mscfsolv.compFop\u001b[0;34m(self, orb)\u001b[0m\n\u001b[1;32m    323\u001b[0m NabkNab \u001b[38;5;241m=\u001b[39m spinor(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmra, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mNcomp)\n\u001b[1;32m    324\u001b[0m NabkNab\u001b[38;5;241m.\u001b[39msetZero()\n\u001b[0;32m--> 325\u001b[0m NabkNab \u001b[38;5;241m=\u001b[39m \u001b[43mdkappa\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdphi\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m    326\u001b[0m \u001b[38;5;66;03m# NabkNab = NabkNab.crop(self.prec)\u001b[39;00m\n\u001b[1;32m    327\u001b[0m NabkNab \u001b[38;5;241m=\u001b[39m NabkNab \u001b[38;5;241m+\u001b[39m dkappa[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m*\u001b[39m dphi[\u001b[38;5;241m1\u001b[39m]\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/spinor.py:62\u001b[0m, in \u001b[0;36mspinor.__mul__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(other) \u001b[38;5;241m==\u001b[39m spinor: \n\u001b[1;32m     60\u001b[0m     \u001b[38;5;66;03m# print(\"spinor element-wise mult\")\u001b[39;00m\n\u001b[1;32m     61\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlength):\n\u001b[0;32m---> 62\u001b[0m         output\u001b[38;5;241m.\u001b[39mcompVect[i] \u001b[38;5;241m=\u001b[39m \u001b[43mother\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompVect\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompVect\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;66;03m# print(\"mult norm\", output.dot(output))\u001b[39;00m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output\n",
+      "File \u001b[0;32m~/Tests_KAIN/ZORA/response/src/complex_fcn.py:115\u001b[0m, in \u001b[0;36mcomplex_fcn.__mul__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m    113\u001b[0m output \u001b[38;5;241m=\u001b[39m complex_fcn(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmra)\n\u001b[1;32m    114\u001b[0m output\u001b[38;5;241m.\u001b[39mreal \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreal \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mreal(other) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimag \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mimag(other)\n\u001b[0;32m--> 115\u001b[0m output\u001b[38;5;241m.\u001b[39mimag \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimag\u001b[49m\u001b[43m(\u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimag\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    116\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
